k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nk-webapp-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: nk-webapp
