k8/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
#    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress
spec:
  rules:
   - host: nikhilkapadia.com
     http:
       paths:
         - backend:
             serviceName: nk-webapp-service
             servicePort: 80
           path: /
   - host: www.nikhilkapadia.com
     http:
       paths:
         - backend:
             serviceName: nk-webapp-service
             servicePort: 80
           path: /
   - host: ecoders.nikhilkapadia.com
     http:
       paths:
         - backend:
             serviceName: ecoders-web-service
             servicePort: 80
           path: /
   - host: stock.nikhilkapadia.com
     http:
       paths:
         - backend:
             serviceName: stockapp-service
             servicePort: 80
           path: /
   - host: blog.nikhilkapadia.com
     http:
       paths:
         - backend:
             serviceName: nkblog-service
             servicePort: 80
           path: /
   - host: mistry.nikhilkapadia.com
     http:
       paths:
         - backend:
             serviceName: mistry-service
             servicePort: 80
           path: /
